--- a/sass/layout/_03-travel.scss
+++ b/sass/layout/_03-travel.scss
@@ -42,7 +42,7 @@
 
     &__overlay1 {
         padding-top: 40px;
-        margin-bottom: 56px;
+        padding-bottom: 56px;
         background-image: url(../images/walkways-background-m-1x.png);
         background-repeat: no-repeat;
         background-size: cover;
