--- a/sass/layout/_04-explore.scss
+++ b/sass/layout/_04-explore.scss
@@ -4,6 +4,7 @@
     background-image: url(../images/explore-background-m-1x.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 
 
     @media (min-device-pixel-ratio: 2),
@@ -97,7 +98,7 @@
     .slider-buttons-list {
         position: absolute;
         width: 367px;
-        top: 63%;
+        top: calc(70% - 20px);
         left: calc(50% - 183px);
         transform: translateY(-50%);
         display: flex;
@@ -108,6 +109,7 @@
         @media screen and (min-width: 768px) {
             width: 467px;
             left: calc(50% - 233px);
+            top: calc(75% - 20px);
         }
     }
 
