--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -16,6 +16,11 @@
         width: 768px;
         // outline: 1px solid blue;
     }
+
+    @media screen and (min-width: 1400px) {
+        width: 1400px;
+        // outline: 1px solid blue;
+    }
     
     @media screen and (min-width: 1920px) {
         width: 1920px;
