--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -12,6 +12,10 @@
         margin-bottom: 5px;
     }
 
+    @media screen and (min-width: 1400px) {
+        margin: 0;
+    }
+
     // background-color: black;
     
 
