--- a/sass/layout/_02-hero.scss
+++ b/sass/layout/_02-hero.scss
@@ -36,7 +36,9 @@
         @include flex;
         flex-direction: column;
 
-
+        @media screen and (min-width: 1400px) {
+            padding-left: 46px;
+        }
     }
 
     &__title {
@@ -53,6 +55,12 @@
             text-align: center;
             margin-bottom: 63px;
         }
+
+        @media screen and (min-width: 1400px) {
+            width: 627px;
+            text-align: start;
+            // margin-left: 45px;
+        }
     }
 
     &__button {
@@ -63,6 +71,21 @@
             margin: 0 auto;
             margin-bottom: 49px;
             @include button(271px, 82px, 211px, 0.8);
+        }
+
+        @media screen and (min-width: 1400px) {
+            margin: 0;
+            margin-bottom: 188px;
+        }
+    }
+
+    &__content {
+        @include flex-column;
+
+        @media screen and (min-width: 1400px) {
+            width: 1300px;
+            flex-direction: row;
+            align-items: end;
         }
     }
 
@@ -83,8 +106,13 @@
         @media screen and (min-width: 768px) {
             order: 1;
             flex-direction: row;
-            width: 100%;
+            width: 738px;
             height: 193px;
+        }
+
+        @media screen and (min-width: 1400px) {
+            width: 899px;
+            margin: 0;
         }
 
         &__item {
@@ -154,6 +182,11 @@
                     url(../images/hero-video-td-2x.jpg);
             }
 
+        }
+
+        @media screen and (min-width: 1400px) {
+            order: 1;
+            margin: 0;
         }
 
         &__circle {
