--- a/sass/layout/_03-travel.scss
+++ b/sass/layout/_03-travel.scss
@@ -3,6 +3,24 @@
     background-image: url(../images/overlay.svg);
     background-color: var(--blue---background);
 
+    .container {
+        @include flex;
+        flex-direction: column;
+        gap: 30px;
+
+        @media screen and (min-width: 1400px) {
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 127px;
+        }
+    }
+
+    &__content {
+        @include flex-column;
+        gap: 15px;
+    }
+
     &__title {
         font-weight: 700;
         font-size: 40px;
@@ -46,6 +64,7 @@
         background-image: url(../images/walkways-background-m-1x.png);
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
 
 
         @media (min-device-pixel-ratio: 2),
@@ -73,12 +92,9 @@
 
         }
 
-        .container {
-            @include flex;
-            flex-direction: column;
-            gap: 30px;
-
-
+        @media screen and (min-width: 1400px) {
+            padding-top: 207px;
+            padding-bottom: 97px;
         }
     }
 
@@ -87,6 +103,7 @@
         background-image: url(../images/beaches-background-m-1x.png);
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
 
 
         @media (min-device-pixel-ratio: 2),
@@ -114,13 +131,16 @@
 
         }
 
-        .container {
-            @include flex;
-            flex-direction: column;
-            gap: 30px;
+        @media screen and (min-width: 1400px) {
+            padding-top: 106px;
+            padding-bottom: 305px;
+        }
 
-            .walkways__picture {
-                order: -1;
+        .walkways__picture {
+            order: -1;
+
+            @media screen and (min-width: 1400px) {
+                order: 0;
             }
         }
     }
@@ -135,6 +155,10 @@
 
         @media screen and (min-width: 768px) {
             width: 630px;
+        }
+
+        @media screen and (min-width: 1400px) {
+            margin: 0;
         }
     }
 }
