--- a/sass/layout/_01-header.scss
+++ b/sass/layout/_01-header.scss
@@ -38,6 +38,10 @@
                     margin-right: 500px;
                 }
 
+                @media screen and (min-width: 1920px) {
+                    margin-right: 906px;
+                }
+
                 &__link {
                     text-transform: uppercase;
                     color: var(--white);
