--- a/sass/layout/_02-hero.scss
+++ b/sass/layout/_02-hero.scss
@@ -32,12 +32,20 @@
 }
 
 .hero {
+    @media screen and (min-width: 1920px) {
+        position: relative;
+    }
+
     .container {
         @include flex;
         flex-direction: column;
 
         @media screen and (min-width: 1400px) {
             padding-left: 46px;
+        }
+
+        @media screen and (min-width: 1920px) {
+            padding-left: 300px;
         }
     }
 
@@ -87,6 +95,10 @@
             flex-direction: row;
             align-items: end;
         }
+
+        @media screen and (min-width: 1920px) {
+            width: 1620px;
+        }
     }
 
     .herolist {
@@ -115,10 +127,19 @@
             margin: 0;
         }
 
+        @media screen and (min-width: 1920px) {
+            width: 1225px;
+            gap: 198px;
+        }
+
         &__item {
             @include flex;
             flex-direction: column;
             gap: 4px;
+
+            @media screen and (min-width: 1920px) {
+                max-width: 210px;
+            }
 
             &__number {
                 font-family: var(--second-family);
@@ -209,5 +230,53 @@
 
     &__vertical {
         display: none;
+
+        @media screen and (min-width: 1920px) {
+            display: block;
+            position: absolute;
+            width: 21px;
+            height: 830px;
+            left: 65px;
+            right: 0px;
+        }
+
+        &__1rectangle {
+            width: 4px;
+            height: 100px;
+            box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.45);
+            background: var(--main-color);
+            margin: 0 auto;
+        }
+
+        &__2rectangle {
+            width: 2px;
+            height: 296px;
+            background: var(--white);
+            margin: 0 auto;
+            margin-bottom: 20px;
+        }
+
+        &__number {
+            font-weight: 700;
+            font-size: 16px;
+            color: var(--white);
+            text-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+            transform: rotate(270deg);
+            margin-bottom: 226px;
+        }
+
+        .sociallist {
+            @include flex-column;
+            gap: 35px;
+
+            &__link {
+                font-weight: 700;
+                font-size: 16px;
+                color: var(--white);
+                text-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+                writing-mode: vertical-rl;
+                transform: rotate(180deg);
+            }
+        }
     }
 }
