--- a/sass/layout/_03-travel.scss
+++ b/sass/layout/_03-travel.scss
@@ -2,6 +2,7 @@
     // padding: 40px 30px;
     background-image: url(../images/overlay.svg);
     background-color: var(--blue---background);
+    background-position: center;
 
     .container {
         @include flex;
