--- a/sass/layout/_05-numbers.scss
+++ b/sass/layout/_05-numbers.scss
@@ -20,6 +20,10 @@
         line-height: 115%;
         text-align: center;
         color: var(--white);
+
+        @media screen and (min-width: 1920px) {
+            font-size: 60px;
+        }
     }
 
     &__description {
@@ -31,6 +35,10 @@
         @media screen and (min-width: 768px) {
             width: 496px;
             margin: 0 auto;
+        }
+
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;
         }
     }
 
@@ -57,6 +65,10 @@
             line-height: 115%;
             text-align: center;
             color: var(--main-color);
+
+            @media screen and (min-width: 1920px) {
+                font-size: 42px;
+            }
         }
 
         &__description {
@@ -68,6 +80,10 @@
             @media screen and (min-width: 768px) {
                 width: 340px;
                 margin: 0 auto;
+            }
+
+            @media screen and (min-width: 1920px) {
+                font-size: 18px;
             }
         }
     }
