--- a/sass/layout/_06-hills.scss
+++ b/sass/layout/_06-hills.scss
@@ -48,6 +48,10 @@
             margin: 0 auto;
             margin-bottom: 51px;
         }
+
+        @media screen and (min-width: 1920px) {
+            font-size: 42px;
+        }
     }
 
     &__description {
@@ -66,6 +70,10 @@
 
         @media screen and (min-width: 1400px) {
             margin-bottom: 36px;
+        }
+
+        @media screen and (min-width: 1920px) {
+            font-size: 18px;
         }
     }
 
